src/objects/Screening__c.object
<CustomObject>
    <description>This object tracks the information collected during the screening of a participant.</description>
    <fields>
        <fullName>Abuser_Contact_with_Caller_s_WA_Contacts__c</fullName>
        <description>Has the abuser had contact with the caller&apos;s friends and family in WA State?</description>
        <inlineHelpText>Has the abuser had contact with the caller&apos;s friends and family in WA State?</inlineHelpText>
        <label>Abuser Contact with Caller&apos;s F&amp;F in WA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Area_of_Residence__c</fullName>
        <description>Where the abuser lives</description>
        <inlineHelpText>Where the abuser lives</inlineHelpText>
        <label>Abuser&apos;s Area of Residence</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Area_of_Work__c</fullName>
        <description>Area where the abuser works</description>
        <inlineHelpText>Area where the abuser works</inlineHelpText>
        <label>Abuser&apos;s Area of Work</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Areas_Frequented__c</fullName>
        <description>Areas the abuser frequents other than work and residence</description>
        <inlineHelpText>Areas the abuser frequents other than work and residence</inlineHelpText>
        <label>Abuser&apos;s Areas Frequented</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Bus_Lines__c</fullName>
        <description>If abuser rides the bus, enter the bus lines that they use</description>
        <inlineHelpText>If abuser rides the bus, enter the bus lines that they use</inlineHelpText>
        <label>Abuser&apos;s Bus Lines</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Contacts_in_WA_State__c</fullName>
        <label>Abuser&apos;s Contacts in WA State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Current_Location__c</fullName>
        <description>Where the abuser is currently located</description>
        <inlineHelpText>Where the abuser is currently located</inlineHelpText>
        <label>Abuser&apos;s Current Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Friends_Family_Frequented_Areas__c</fullName>
        <description>Areas where the abuser&apos;s friends/family frequent. To determine if they need confidential shelter or if Shelter is located at an unsafe area.</description>
        <inlineHelpText>Areas where the abuser&apos;s friends/family frequent. To determine if they need confidential shelter or if Shelter is located at an unsafe area.</inlineHelpText>
        <label>Abuser&apos;s Friends/Family Frequented Areas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abuser_s_Release_Date_from_Jail__c</fullName>
        <description>Release date if abuser is in jail.</description>
        <inlineHelpText>Release date if abuser is in jail.</inlineHelpText>
        <label>Abuser&apos;s Release Date from Jail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Screening_Situation_Info__c</fullName>
        <description>Additional information related to the caller&apos;s DV history and situation</description>
        <inlineHelpText>Additional information related to the caller&apos;s DV history and situation</inlineHelpText>
        <label>Additional Screening Situation Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Allowed_to_Leave_Home_Alone__c</fullName>
        <description>Is the caller allowed to leave the house by herself?</description>
        <inlineHelpText>Is the caller allowed to leave the house by herself?</inlineHelpText>
        <label>Allowed to Leave Home Alone</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bed_Bugs_Outcome__c</fullName>
        <description>Outcome of last bed bugs exposure</description>
        <label>Bed Bugs Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Best_Time_to_Call_Back__c</fullName>
        <label>Best Time to Call Back</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brief_History_of_DV__c</fullName>
        <description>Brief history of DV</description>
        <label>Brief History of DV</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Caller_Location__c</fullName>
        <description>Location caller is calling from.  To determine if they are calling from another shelter, jail, etc.</description>
        <inlineHelpText>Location caller is calling from.  To determine if they are calling from another shelter, jail, etc.</inlineHelpText>
        <label>Caller Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_s_Friends_Family_in_WA__c</fullName>
        <label>Caller&apos;s Friends/Family in WA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Caller_s_Last_Check_In__c</fullName>
        <description>Caller&apos;s last check-in between being approved for Screening and arriving to Shelter.</description>
        <inlineHelpText>Caller&apos;s last check-in between being approved for Screening and arriving to Shelter.  We cannot hold space for more than 8 hours.</inlineHelpText>
        <label>Caller&apos;s Lastest Check-In</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Can_Stay_with_Family_Friends__c</fullName>
        <description>Can the caller stay with family or friends?</description>
        <inlineHelpText>Can the caller stay with family or friends?</inlineHelpText>
        <label>Can Stay with Family/Friends?</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chicken_Pox_Outcome__c</fullName>
        <description>Outcome of last exposure</description>
        <inlineHelpText>Outcome of last exposure</inlineHelpText>
        <label>Chicken Pox Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_10_Age_Scr__c</fullName>
        <label>Child 10 Age (Scr)</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_10_Coming_to_Shelter_Scr__c</fullName>
        <label>Child 10 Coming to Shelter? (Scr)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_10_Gender_Scr__c</fullName>
        <label>Child 10 Gender (Scr)</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transgendered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Identify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_10_Name_Scr__c</fullName>
        <label>Child 10 Name (Scr)</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_1_Age_Scr__c</fullName>
        <label>Child 1 Age (Scr)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_1_Coming_to_Shelter_Scr__c</fullName>
        <label>Child 1 Coming to Shelter? (Scr)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_1_Gender_Scr__c</fullName>
        <label>Child 1 Gender (Scr)</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transgendered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Identify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_1_Name_Scrn__c</fullName>
        <label>Child 1 Name (Scr)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_2_Age_Scr__c</fullName>
        <label>Child 2 Age (Scr)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_2_Coming_to_Shelter_Scr__c</fullName>
        <label>Child 2 Coming to Shelter? (Scr)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_2_Gender_Scr__c</fullName>
        <label>Child 2 Gender (Scr)</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transgendered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Identify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_2_Name_Scr__c</fullName>
        <label>Child 2 Name (Scr)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_3_Name_Scr__c</fullName>
        <label>Child 3 Name (Scr)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Childrens_Special_Needs_Addt_l_Concerns__c</fullName>
        <label>Childrens Special Needs/Addt&apos;l Concerns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comfortable_Living_in_this_Type_of_House__c</fullName>
        <description>Is the caller comfortable living in this type of household?</description>
        <inlineHelpText>Is the caller comfortable living in this type of household?  If no, screening stops.</inlineHelpText>
        <label>Comfortable with this Type of Household?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concerns_About_Children_in_Communal_Envi__c</fullName>
        <label>Concerns About Children in Communal Envi</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DV_History_of_Injuries__c</fullName>
        <label>DV History of Injuries</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined to State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DV_History_of_Monitoring_Stalking__c</fullName>
        <label>DV History of Monitoring/Stalking</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined to State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DV_History_of_Physical_Abuse__c</fullName>
        <label>DV History of Physical Abuse</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined to State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DV_History_of_Threats__c</fullName>
        <label>DV History of Threats</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined to State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DV_History_of_Unwanted_Sexual_Behavior__c</fullName>
        <label>DV History of Unwanted Sexual Behavior</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined to State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DV_History_of_Weapons_Use_Talk__c</fullName>
        <label>DV History of Weapons Use/Talk</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined to State</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Difficulties_in_Accommodation__c</fullName>
        <description>Does the caller have any difficulties in accommodation?</description>
        <inlineHelpText>Does the caller have any difficulties in accommodation?  If so, screening ends and they need to be referred elsewhere.</inlineHelpText>
        <label>Difficulties in Accommodation</label>
        <picklist>
            <picklistValues>
                <fullName>No Difficulties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climbing 3 flights of stairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sleeping on a top bunk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doing daily chores (Children exempt)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Expected_Arrival_Date__c</fullName>
        <inlineHelpText>What date will the Caller be arriving to Shelter?</inlineHelpText>
        <label>Expected Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Injuries_Description__c</fullName>
        <description>Text that explains DV history of injuries</description>
        <label>Injuries Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interpreter_Hours_during_Screening__c</fullName>
        <inlineHelpText>Enter in measurements of an hour. (e.g. 30 minutes is entered as .5)</inlineHelpText>
        <label>Interpreter Hours during Screening</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interpreter_Language_used_at_Screening__c</fullName>
        <label>Interpreter Language used at Screening</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interpreter_Needed_at_Screening__c</fullName>
        <label>Interpreter Needed at Screening?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Contact_with_Abuser__c</fullName>
        <description>When was the last contact the caller had with their abuser?</description>
        <inlineHelpText>When was the last contact the caller had with their abuser?</inlineHelpText>
        <label>Last Contact with Abuser</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Exposure_to_Bed_Bugs__c</fullName>
        <description>How long ago was the caller or children exposed to bed bugs?</description>
        <inlineHelpText>How long ago was the caller or children exposed to bed bugs?</inlineHelpText>
        <label>Last Exposure to Bed Bugs</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Exposure_to_Chicken_Pox__c</fullName>
        <description>How long ago was the caller or children exposed to Chicken Pox?</description>
        <inlineHelpText>How long ago was the caller or children exposed to Chicken Pox?</inlineHelpText>
        <label>Last Exposure to Chicken Pox</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Exposure_to_Lice__c</fullName>
        <description>How long ago was the caller or children exposed to Lice?</description>
        <inlineHelpText>How long ago was the caller or children exposed to Lice?</inlineHelpText>
        <label>Last Exposure to Lice</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Exposure_to_Scabies__c</fullName>
        <description>How long ago was the caller or children exposed to Scabies?</description>
        <inlineHelpText>How long ago was the caller or children exposed to Scabies?</inlineHelpText>
        <label>Last Exposure to Scabies</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Exposure_to_Tuberculosis__c</fullName>
        <description>How long ago was the caller or children exposed to TB?</description>
        <inlineHelpText>How long ago was the caller or children exposed to TB?</inlineHelpText>
        <label>Last Exposure to Tuberculosis</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Permanent_Address_City__c</fullName>
        <label>Last Permanent Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Permanent_Address_ZipCode__c</fullName>
        <label>Last Permanent Address ZipCode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Permanent_Street_Address__c</fullName>
        <label>Last Permanent Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_at_Last_Permanent_Address__c</fullName>
        <description>Length of time at last permanent address. To determine if chronically homeless.</description>
        <inlineHelpText>Length of time at last permanent address. To determine if chronically homeless.</inlineHelpText>
        <label>Length at Last Permanent Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_in_Abusive_Relationship__c</fullName>
        <description>Length of time in relationship with abuser.</description>
        <inlineHelpText>Length of time in relationship with abuser.</inlineHelpText>
        <label>Length in Abusive Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Months - 1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-5 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10+ Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lice_Outcome__c</fullName>
        <description>Outcome of last Lice exposure</description>
        <label>Lice Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Treated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitoring_Stalking_Description_c__c</fullName>
        <description>Text that explains DV history of Monitoring/Stalking</description>
        <label>Monitoring/Stalking Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <label>Participant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Screenings</relationshipLabel>
        <relationshipName>Screenings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone_Safety_Notes__c</fullName>
        <description>To capture any notes related to their Safe Phone Number</description>
        <inlineHelpText>To capture any notes related to their Safe Phone Number</inlineHelpText>
        <label>Phone Safety Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Physical_Abuse_Description__c</fullName>
        <description>Text that explains DV history of physical abuse</description>
        <label>Physical Abuse Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pickup_Spot_Given_to_Caller__c</fullName>
        <label>Pickup Spot Given to Caller</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Possible_Abuser_Actions_Once_Left__c</fullName>
        <description>What does the caller think the abuser will do now that / once they leave the home?</description>
        <inlineHelpText>What does the caller think the abuser will do now that / once they leave the home?</inlineHelpText>
        <label>Possible Abuser Actions Once Victim Left</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Address_City__c</fullName>
        <description>Displays Mailing City from Contact record. Cannot edit here.</description>
        <formula>Participant__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays Mailing City from Contact record. Cannot edit here.</inlineHelpText>
        <label>Previous Address City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previously_Stayed_at_NB__c</fullName>
        <description>Has the caller previously stayed at NB Shelter?</description>
        <inlineHelpText>Has the caller previously stayed at NB Shelter?</inlineHelpText>
        <label>Previously Stayed at NB</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Abuser_Other__c</fullName>
        <description>If &quot;Other&quot; was selected for Primary Abuser, explain</description>
        <inlineHelpText>If &quot;Other&quot; was selected for Primary Abuser, explain</inlineHelpText>
        <label>If Other, Explain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Abuser_Relationship__c</fullName>
        <description>Relationship of the Abuser to the Caller</description>
        <inlineHelpText>Relationship of the Abuser to the Caller</inlineHelpText>
        <label>Primary Abuser Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Spouse/Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex-Spouse/Ex-Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Parent of Child(ren)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boyfriend/Girlfriend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex-Boyfriend/Ex-Girlfriend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Step)/Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Step)/Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Step)/Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Step)/Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Step)/Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Step)/Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_For_Denial__c</fullName>
        <description>Reason that the caller was not a good fit for Shelter.</description>
        <inlineHelpText>Reason that the caller was not a good fit for Shelter.</inlineHelpText>
        <label>Reason for Denial</label>
        <picklist>
            <picklistValues>
                <fullName>Unsafe area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn&apos;t meet criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program not a good fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn&apos;t need confidential shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t meet accommodation / special needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Screening_Incomplete__c</fullName>
        <description>If the screening cannot be finished, enter a reason why so that the next Advocate will know.</description>
        <inlineHelpText>If the screening cannot be finished, enter a reason why so that the next Advocate will know.</inlineHelpText>
        <label>Explain Why Incomplete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Calling_NB_Today__c</fullName>
        <description>Reason the Caller has chosen to call NB today. What has changed in their situation?</description>
        <inlineHelpText>Reason the Caller has chosen to call NB today. What has changed in their situation?</inlineHelpText>
        <label>Reason for Calling NB Today</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Choosing_WA_Stat__c</fullName>
        <label>Reason for Choosing WA State</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Denial_Explaination__c</fullName>
        <description>Text that explains why a caller was denied screening.</description>
        <inlineHelpText>Explain the reason that someone was denied shelter entry.  For example, if someone did not meet criteria, explain what specific criteria were not met.</inlineHelpText>
        <label>Explain Why Denied</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving_Previous_Shelter__c</fullName>
        <description>Reason the caller left the previous shelter.  We do not accept residents who are coming from other shelters because their time is up.</description>
        <inlineHelpText>Reason the caller left the previous shelter.  We do not accept residents who are coming from other shelters because their time is up.</inlineHelpText>
        <label>Reason for Leaving Previous Shelter</label>
        <picklist>
            <picklistValues>
                <fullName>Time is Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsafe Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inconvenient Locatin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referred_Caller_To__c</fullName>
        <inlineHelpText>What services was the Caller referred to?</inlineHelpText>
        <label>Referred Caller To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Safe_Phone_Number_at_Screening__c</fullName>
        <label>Safe Phone Number at Screening</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Safety_Plan_until_Arrival__c</fullName>
        <description>Notes about what the caller will do to stay safe until they arrive at Shelter</description>
        <inlineHelpText>What can you do to stay safe until you get here?  - Notes about what the caller will do to stay safe until they arrive at Shelter</inlineHelpText>
        <label>Safety Plan until Arrival</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>